--- a/Nova_Land/Views/Home/Index.cshtml
+++ b/Nova_Land/Views/Home/Index.cshtml
@@ -5,12 +5,13 @@
 }
 
 <div class="text-center">
-    <form>
+    @using (Html.BeginForm("Search", "Product", FormMethod.Post))
+    {
         <div class="row">
             <div class="col-12">
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
-                    <input class="form-control" placeholder="Search" />
+                    <input class="form-control" placeholder="Search" name="Search"/>
                     <span class="text-danger"></span>
                 </div>
             </div>
@@ -18,13 +19,13 @@
         <div class="row">
             <div class="col-6">
                 <div class="form-group">
-                    <input class="form-control" placeholder="Province" />
+                    <input class="form-control" placeholder="Province" name="Province"/>
                     <span class="text-danger"></span>
                 </div>
             </div>
             <div class="col-6">
                 <div class="form-group">
-                    <input class="form-control" placeholder="City" />
+                    <input class="form-control" placeholder="City" name="City" />
                     <span class="text-danger"></span>
                 </div>
             </div>
@@ -34,7 +35,9 @@
                 <button type="submit" class="btn btn-primary float-right">Search</button>
             </div>
         </div>
-    </form>
+    }
+
+
     <div class="pt-5 row">
         <div class="col-6">
             <div class="card">
