--- a/Nova_Land/wwwroot/css/site.css
+++ b/Nova_Land/wwwroot/css/site.css
@@ -61,6 +61,8 @@ html {
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
+  padding-bottom: 100px;
+
 }
 .footer {
   position: absolute;
