--- a/Nova_Land/Views/Home/Index.cshtml
+++ b/Nova_Land/Views/Home/Index.cshtml
@@ -41,7 +41,7 @@
     <div class="pt-5 row">
         <div class="col-6">
             <div class="card">
-                <i class='fas fa-house-user' style='font-size:48px;'></i>
+                <i class='fas fa-house-user' style='font-size:48px;padding-top:15px;'></i>
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(model => model[0].CategoryName)</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -52,7 +52,7 @@
         <div class="col-6">
             <div class="card">
                 
-               <i class='fas fa-car-side' style='font-size:48px;'></i>
+               <i class='fas fa-car-side' style='font-size:48px;padding-top:15px;'></i>
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(model => model[1].CategoryName)</h5>
                     <p class="card-text">Car Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -61,10 +61,11 @@
             </div>
         </div>
     </div>
-    <div class="row">
+    <br />
+    <div class="row" >
         <div class="col-6">
             <div class="card">
-                <i class='fas fa-couch' style='font-size:48px;'></i>
+                <i class='fas fa-couch' style='font-size:48px;padding-top:15px;'></i>
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(model => model[2].CategoryName)</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -74,7 +75,7 @@
         </div>
         <div class="col-6">
             <div class="card">
-                <i class='fas fa-truck' style='font-size:48px;'></i>
+                <i class='fas fa-truck' style='font-size:48px;padding-top:15px;'></i>
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(model => model[3].CategoryName)</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
