--- a/Nova_Land/Views/Product/Search.cshtml
+++ b/Nova_Land/Views/Product/Search.cshtml
@@ -5,37 +5,59 @@
 @{
     ViewData["SearchParams"] = Model.SearchParams;
 }
+
+@if (Model.IsItemAdded)
+{
+    <script>
+        $(document).ready(function () {
+            $('.toast').toast('show');
+        });
+    </script>
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true" style="position: absolute; top: 50px; right: 50px; background-color: lightgreen">
+        <div class="toast-header">
+            <strong class="mr-auto" style="color:green">Sucess</strong>
+            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="toast-body">
+            Item Added to Cart
+        </div>
+    </div>
+}
+
+
 <div class="text-center">
     @using (Html.BeginForm("Search", "Product", FormMethod.Post))
     {
-    <div class="row">
-        <div class="col-12">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <input class="form-control" placeholder="Search" name="Search" value="@Html.DisplayFor(model => model.SearchParams.Search)" />
-                <span class="text-danger"></span>
+        <div class="row">
+            <div class="col-12">
+                <div asp-validation-summary="All" class="text-danger"></div>
+                <div class="form-group">
+                    <input class="form-control" placeholder="Search" name="Search" value="@Html.DisplayFor(model => model.SearchParams.Search)" />
+                    <span class="text-danger"></span>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-6">
-            <div class="form-group">
-                <input class="form-control" placeholder="Province" name="Province" value="@Html.DisplayFor(model => model.SearchParams.Province)" />
-                <span class="text-danger"></span>
+        <div class="row">
+            <div class="col-6">
+                <div class="form-group">
+                    <input class="form-control" placeholder="Province" name="Province" value="@Html.DisplayFor(model => model.SearchParams.Province)" />
+                    <span class="text-danger"></span>
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-group">
+                    <input class="form-control" placeholder="City" name="City" value="@Html.DisplayFor(model => model.SearchParams.City)" />
+                    <span class="text-danger"></span>
+                </div>
             </div>
         </div>
-        <div class="col-6">
-            <div class="form-group">
-                <input class="form-control" placeholder="City" name="City" value="@Html.DisplayFor(model => model.SearchParams.City)" />
-                <span class="text-danger"></span>
+        <div class="row">
+            <div class="col-12">
+                <button type="submit" class="btn btn-primary float-right">Search</button>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <button type="submit" class="btn btn-primary float-right">Search</button>
-        </div>
-    </div>
     }
     <div class="row">
         <h2 class="p-3">Search Results</h2>
@@ -44,39 +66,37 @@
         <div class="container">
             @foreach (var product in Model.Products)
             {
-            @*<partial name="_ProductTilePartial"
-                     model=product view-data="ViewData"/>*@
+                @*<partial name="_ProductTilePartial"
+                    model=product view-data="ViewData"/>*@
 
-            <div class="card">
-                <div class="card-body">
+                <div class="card">
+                    <div class="card-body">
 
+                    </div>
+                    <div class="row">
+                        <div class="col-3">
+                            <h4>@product.Name</h4>
+                            @*<h3>@Html.DisplayFor(product => product.Name)</h3>*@
+                        </div>
+                        <div class="col-3">
+                            @product.Description.Substring(0, 50)
+                        </div>
+                        <div class="col-3">
+                            @product.UnitPrice $
+                            @*@Html.DisplayFor(product => product.UnitPrice) $*@
+                        </div>
+                        <div class="col-3">
+                            @using (Html.BeginForm("AddToCart", "Product", FormMethod.Get))
+                            {
+                                <input type="hidden" name="Search" value="@Html.DisplayFor(model => model.SearchParams.Search)" />
+                                <input type="hidden" name="Province" value="@Html.DisplayFor(model => model.SearchParams.Province)" />
+                                <input type="hidden" name="City" value="@Html.DisplayFor(model => model.SearchParams.City)" />
+                                <input type="hidden" name="ProductId" value="@product.Id" />
+                                <button class="btn btn-primary" type="submit">Add To Cart</button>
+                            }
+                        </div>
+                    </div>
                 </div>
-                <div class="row">
-                    <div class="col-3">
-                        <h4>@product.Name</h4>
-                        @*<h3>@Html.DisplayFor(product => product.Name)</h3>*@
-                    </div>
-                    <div class="col-3">
-                        @product.Description.Substring(0, 50)
-                    </div>
-                    <div class="col-3">
-                        @product.UnitPrice $ 
-                        @*@Html.DisplayFor(product => product.UnitPrice) $*@
-                    </div>
-                    <div class="col-3">
-                        @using (Html.BeginForm("AddToCart", "Product", FormMethod.Post))
-                        {
-                        <input type="hidden" name="Search" value="@Html.DisplayFor(model => model.SearchParams.Search)" />
-                        <input type="hidden" name="Province" value="@Html.DisplayFor(model => model.SearchParams.Province)" />
-                        <input type="hidden" name="City" value="@Html.DisplayFor(model => model.SearchParams.City)" />
-                        <input type="hidden" name="ProductId" value="@product.Id" />
-                        <button class="btn btn-primary" type="submit">Add To Cart</button>
-                        }
-
-
-                    </div>
-                </div>
-            </div>
             }
         </div>
     </div>
