--- a/Nova_Land/Views/Product/Details.cshtml
+++ b/Nova_Land/Views/Product/Details.cshtml
@@ -28,7 +28,7 @@
 
 <div class="row">
     <div class="col-6">
-        <img src="https://picsum.photos/200/300" />
+        <img src="https://picsum.photos/500/600" />
     </div>
     <div class="col-6">
         <div class="row">
@@ -39,6 +39,11 @@
         <div class="row">
             <div class="col-12">
                 <p>@Model.Product.Description</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <p class="font-weight-bold">@Model.Product.UnitPrice $ </p>
             </div>
         </div>
         <div class="row">
