--- a/Nova_Land/Views/Home/Payment.cshtml
+++ b/Nova_Land/Views/Home/Payment.cshtml
@@ -1,62 +1,78 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" />
-</head>
-<body>
+﻿@model Nova_Land.Models.Payment
 <h4 class="mb-3">Payment</h4>
-    <form method="post" action="">
-        <div class="d-block my-3">
-          <div class="custom-control custom-radio">
-            <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required>
-            <label class="custom-control-label" for="credit">Credit card</label>
+@using (Html.BeginForm("PaymentComplete", "Home", FormMethod.Post))
+{
+    <div class="row">
+          <div class="col-md-6 mb-3">
+            <label for="cc-name">Credit Card Holder Full Name</label>
+             <input asp-for="CreditCardHolderName" class="form-control">
+             <span asp-validation-for="CreditCardHolderName" class="text-danger"></span>
           </div>
-          <div class="custom-control custom-radio">
-            <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required>
-            <label class="custom-control-label" for="debit">Debit card</label>
-          </div>
-          
-        </div>
+       </div>
         <div class="row">
-          <div class="col-md-6 mb-3">
-            <label for="cc-name">Name on card</label>
-            <input type="text" class="form-control" id="cc-name" placeholder="Name" required>
-            <small class="text-muted">Full name as displayed on card</small>
-            <div class="invalid-feedback">
-              Name on card is required
-            </div>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="cc-number">Credit card number</label>
-            <input type="text" class="form-control" id="cc-number" placeholder="0000-0000-0000-0000" required>
-            <div class="invalid-feedback">
-              Credit card number is required
-            </div>
+          <div class="col-md-3 mb-3">
+            <label for="cc-cvv">Street Address</label>
+            <input asp-for="St_Address" class="form-control" required>
+              <span asp-validation-for="St_Address" class="text-danger"></span>
           </div>
         </div>
         <div class="row">
           <div class="col-md-3 mb-3">
-            <label for="cc-expiration">Expiration</label>
-            <input type="text" class="form-control" id="cc-expiration" placeholder="mm/dd" required>
-            <div class="invalid-feedback">
-              Expiration date required
-            </div>
+            <label for="cc-cvv">City</label>
+            <input asp-for="City" class="form-control" required>
+              <span asp-validation-for="City" class="text-danger"></span>
+          </div>
+          <div class="col-md-3 mb-3">
+            <label for="cc-cvv">State</label>
+            <input asp-for="State" class="form-control" required>
+              <span asp-validation-for="State" class="text-danger"></span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3 mb-3">
+            <label for="cc-cvv">Country</label>
+            <input asp-for="Country" class="form-control" required>
+              <span asp-validation-for="Country" class="text-danger"></span>
+          </div>
+          <div class="col-md-3 mb-3">
+            <label for="cc-cvv">Zip Code</label>
+            <input asp-for="Zip" class="form-control" required>
+              <span asp-validation-for="Zip" class="text-danger"></span>
+          </div>
+        </div>
+       <div class="d-block my-3">
+          <div class="custom-control custom-radio">
+            <input id="Master" name="paymentMethod" type="radio" class="custom-control-input" checked required>
+            <label class="custom-control-label" for="Master">Master</label>
+          </div>
+          <div class="custom-control custom-radio">
+            <input id="Visa" name="paymentMethod" type="radio" class="custom-control-input" required>
+            <label class="custom-control-label" for="Visa">Visa</label>
+          </div>
+          <div class="custom-control custom-radio">
+            <input id="AmericanExpress" name="paymentMethod" type="radio" class="custom-control-input" required>
+            <label class="custom-control-label" for="AmericanExpress">American Express</label>
+          </div>
+       </div>   
+       <div class="row">
+          <div class="col-md-6 mb-3">
+            <label for="cc-name">Credit Card Number</label>
+             <input asp-for="Number" class="form-control" required>
+                <span asp-validation-for="Number" class="text-danger"></span>
+          </div>
+       </div>
+        <div class="row">
+          <div class="col-md-3 mb-3">
+            <label for="cc-expiration">Expiry Date(MM/YYYY)</label>
+             <input asp-for="Exp_dt" class="form-control" required>
+                <span asp-validation-for="Exp_dt" class="text-danger"></span>
           </div>
           <div class="col-md-3 mb-3">
             <label for="cc-cvv">CVV</label>
-            <input type="text" class="form-control" id="cc-cvv" placeholder="cvv" required>
-            <div class="invalid-feedback">
-              Security code required
-            </div>
+            <input asp-for="cvv" class="form-control" required>
+              <span asp-validation-for="cvv" class="text-danger"></span>
           </div>
         </div>
         <hr class="mb-4">
-        <div style="text-align:center;"><button class="btn btn-primary btn-lg" type="submit">Confirm Payment</button></div>
-      </form>
-
-
-</body>
-</html>
+        <div style="text-align:center;"><button class="btn btn-primary btn-lg" type="submit">Make Payment</button></div>
+}
