--- a/Nova_Land/Views/Product/Search.cshtml
+++ b/Nova_Land/Views/Product/Search.cshtml
@@ -91,6 +91,7 @@
                                 <input type="hidden" name="Search" value="@Html.DisplayFor(model => model.SearchParams.Search)" />
                                 <input type="hidden" name="Province" value="@Html.DisplayFor(model => model.SearchParams.Province)" />
                                 <input type="hidden" name="City" value="@Html.DisplayFor(model => model.SearchParams.City)" />
+                                <input type="hidden" name="Category" value="@Html.DisplayFor(model => model.SearchParams.Category)" />
                                 <input type="hidden" name="ProductId" value="@product.Id" />
                                 <button class="btn btn-primary" type="submit">Add To Cart</button>
                             }
