Added minor Code fixes

--- a/Nova_Land/Views/Checkout/Index.cshtml
+++ b/Nova_Land/Views/Checkout/Index.cshtml
@@ -3,6 +3,7 @@
 *@
 @model Nova_Land.Models.Order
 @{
+    ViewData["Title"] = "Checkout";
 }
 <h1>Checkout Page</h1>
 @if (Model != null && Model.OrderLineItems.Count > 0)
