--- a/Nova_Land/Views/Home/Payment.cshtml
+++ b/Nova_Land/Views/Home/Payment.cshtml
@@ -1,87 +1,90 @@
 ﻿@model Nova_Land.ViewModels.PaymentViewModel
+@{
+    ViewData["Title"] = "Payment";
+}
 <h4 class="mb-3">Payment</h4>
 @using (Html.BeginForm("PaymentComplete", "Home", FormMethod.Post))
 {
-       <div class="row">
-          <div class="col-md-6 mb-3">
+    <div class="row">
+        <div class="col-md-6 mb-3">
             <label for="cc-name">Credit Card Holder Full Name</label>
-             <input asp-for="Payment.CreditCardHolderName" class="form-control">
-             <span asp-validation-for="Payment.CreditCardHolderName" class="text-danger"></span>
-          </div>
-       </div>
-        <div class="row">
-          <div class="col-md-3 mb-3">
+            <input asp-for="Payment.CreditCardHolderName" class="form-control">
+            <span asp-validation-for="Payment.CreditCardHolderName" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3 mb-3">
             <label for="cc-cvv">Street Address</label>
             <input asp-for="Payment.St_Address" class="form-control" required>
-              <span asp-validation-for="Payment.St_Address" class="text-danger"></span>
-          </div>
+            <span asp-validation-for="Payment.St_Address" class="text-danger"></span>
         </div>
-        <div class="row">
-          <div class="col-md-3 mb-3">
+    </div>
+    <div class="row">
+        <div class="col-md-3 mb-3">
             <label for="cc-cvv">City</label>
             <input asp-for="Payment.City" class="form-control" required>
-              <span asp-validation-for="Payment.City" class="text-danger"></span>
-          </div>
-          <div class="col-md-3 mb-3">
+            <span asp-validation-for="Payment.City" class="text-danger"></span>
+        </div>
+        <div class="col-md-3 mb-3">
             <label for="cc-cvv">State</label>
             <input asp-for="Payment.State" class="form-control" required>
-              <span asp-validation-for="Payment.State" class="text-danger"></span>
-          </div>
+            <span asp-validation-for="Payment.State" class="text-danger"></span>
         </div>
-        <div class="row">
-          <div class="col-md-3 mb-3">
+    </div>
+    <div class="row">
+        <div class="col-md-3 mb-3">
             <label for="cc-cvv">Country</label>
             <input asp-for="Payment.Country" class="form-control" required>
-              <span asp-validation-for="Payment.Country" class="text-danger"></span>
-          </div>
-          <div class="col-md-3 mb-3">
+            <span asp-validation-for="Payment.Country" class="text-danger"></span>
+        </div>
+        <div class="col-md-3 mb-3">
             <label for="cc-cvv">Zip Code</label>
             <input asp-for="Payment.Zip" class="form-control" required>
-              <span asp-validation-for="Payment.Zip" class="text-danger"></span>
-          </div>
+            <span asp-validation-for="Payment.Zip" class="text-danger"></span>
         </div>
-       <div class="d-block my-3">
-          <div class="custom-control custom-radio">
+    </div>
+    <div class="d-block my-3">
+        <div class="custom-control custom-radio">
             @*<input value="Master" name="paymenttype" type="radio" class="custom-control-input" checked >*@
             @Html.RadioButtonFor(model => model.Payment.paymenttype, "Master")
             @*<label class="custom-control-label" for="Master">Master</label>*@
             @Html.Label("Master")
-          </div>
-          <div class="custom-control custom-radio">
+        </div>
+        <div class="custom-control custom-radio">
             @*<input value="Visa" name="paymenttype" type="radio" class="custom-control-input"  >*@
             @Html.RadioButtonFor(model => model.Payment.paymenttype, "Visa")
             @*<label class="custom-control-label" for="Visa">Visa</label>*@
             @Html.Label("Visa")
-          </div>
-          <div class="custom-control custom-radio">
-              @Html.RadioButtonFor(model => model.Payment.paymenttype, "AmericanExpress")
+        </div>
+        <div class="custom-control custom-radio">
+            @Html.RadioButtonFor(model => model.Payment.paymenttype, "AmericanExpress")
             @Html.Label("American Express")
             @*<input value="American Express" name="paymenttype" type="radio" class="custom-control-input" >
-            <span asp-validation-for="paymenttype" class="text-danger"></span>
-            <label class="custom-control-label" for="AmericanExpress">American Express</label>*@
-          </div>
-          @Html.ValidationMessageFor(m => m.Payment.paymenttype, "", new { @class = "error" })
-       </div>
-       <div class="row">
-          <div class="col-md-6 mb-3">
+                <span asp-validation-for="paymenttype" class="text-danger"></span>
+                <label class="custom-control-label" for="AmericanExpress">American Express</label>*@
+        </div>
+        @Html.ValidationMessageFor(m => m.Payment.paymenttype, "", new { @class = "error" })
+    </div>
+    <div class="row">
+        <div class="col-md-6 mb-3">
             <label for="cc-name">Credit Card Number</label>
-             <input asp-for="Payment.Number" class="form-control" required>
-                <span asp-validation-for="Payment.Number" class="text-danger"></span>
-          </div>
-       </div>
-        <div class="row">
-          <div class="col-md-3 mb-3">
+            <input asp-for="Payment.Number" class="form-control" required>
+            <span asp-validation-for="Payment.Number" class="text-danger"></span>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3 mb-3">
             <label for="cc-expiration">Expiry Date(MM/YYYY)</label>
-             <input asp-for="Payment.Exp_dt" class="form-control" required>
-                <span asp-validation-for="Payment.Exp_dt" class="text-danger"></span>
-          </div>
-          <div class="col-md-3 mb-3">
+            <input asp-for="Payment.Exp_dt" class="form-control" required>
+            <span asp-validation-for="Payment.Exp_dt" class="text-danger"></span>
+        </div>
+        <div class="col-md-3 mb-3">
             <label for="cc-cvv">CVV</label>
             <input asp-for="Payment.cvv" class="form-control" required>
-              <span asp-validation-for="Payment.cvv" class="text-danger"></span>
-          </div>
-          <input type="hidden" value="@Model.OrderId" name="OrderId"/>
+            <span asp-validation-for="Payment.cvv" class="text-danger"></span>
         </div>
-        <hr class="mb-4">
-        <div style="text-align:center;"><button class="btn btn-primary btn-lg" type="submit">Make Payment</button></div>
+        <input type="hidden" value="@Model.OrderId" name="OrderId" />
+    </div>
+    <hr class="mb-4">
+    <div style="text-align:center;"><button class="btn btn-primary btn-lg" type="submit">Make Payment</button></div>
 }
