--- a/Nova_Land/Views/Product/Search.cshtml
+++ b/Nova_Land/Views/Product/Search.cshtml
@@ -4,6 +4,7 @@
 @model Nova_Land.ViewModels.ProductSearchViewModel
 @{
     ViewData["SearchParams"] = Model.SearchParams;
+    ViewData["Title"] = "Search";
 }
 
 @if (Model.IsItemAdded)
@@ -43,7 +44,12 @@
             <div class="col-6">
                 <div class="form-group">
                     @*<input class="form-control" placeholder="Province" name="Province" value="@Html.DisplayFor(model => model.SearchParams.Province)" />*@
-                    @Html.DropDownList("Province", new SelectList(new List<string>() { "Alberta", "British Columbia", "Manitoba", "Nova Scotia", "New Brunswick", "Newfoundland and Labrador", "Northwest Territories", "Nova Scotia", "Nunavut", "Ontario", "Prince Edward Island", "Quebec", "Saskatchewan", "Yukon" }), new { @class = "form-control" })
+                    @Html.DropDownListFor(m => m.SearchParams.Province, new SelectList(new List<string>()
+                    { "Alberta", "British Columbia", "Manitoba", "Nova Scotia", "New Brunswick",
+                   "Newfoundland and Labrador", "Northwest Territories", "Nova Scotia",
+                   "Nunavut", "Ontario", "Prince Edward Island", "Quebec", "Saskatchewan", "Yukon" }), Model.SearchParams.Province, new { @class = "form-control" })
+
+
                     <span class="text-danger"></span>
                 </div>
             </div>
