--- a/Nova_Land/Views/Shared/_Layout.cshtml
+++ b/Nova_Land/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
-                            <li class="nav-item">
+                            @*<li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                             </li>
                             
@@ -33,7 +33,7 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Details">Details</a>
-                            </li>
+                            </li>*@
                             
                         </ul>
                         <ul class="nav justify-content-end">
