--- a/Nova_Land/Views/Home/Index.cshtml
+++ b/Nova_Land/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                 <i class='fas fa-house-user' style='font-size:48px;padding-top:15px;'></i>
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(model => model[0].CategoryName)</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">@Model[0].Description</p>
                     @using (Html.BeginForm("Search", "Product", FormMethod.Post))
                     {
                         <input name="Category" type="hidden" value="@Html.DisplayFor(model => model[0].CategoryName)"/>
@@ -61,7 +61,7 @@
                <i class='fas fa-car-side' style='font-size:48px;padding-top:15px;'></i>
                <div class="card-body">
                    <h5 class="card-title">@Html.DisplayFor(model => model[1].CategoryName)</h5>
-                   <p class="card-text">Car Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                   <p class="card-text">@Model[1].Description</p>
                    @using (Html.BeginForm("Search", "Product", FormMethod.Post))
                    {
                        <input name="Category" type="hidden" value="@Html.DisplayFor(model => model[1].CategoryName)" />
@@ -78,7 +78,7 @@
                 <i class='fas fa-couch' style='font-size:48px;padding-top:15px;'></i>
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(model => model[2].CategoryName)</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">@Model[2].Description</p>
                     @using (Html.BeginForm("Search", "Product", FormMethod.Post))
                     {
                         <input name="Category" type="hidden" value="@Html.DisplayFor(model => model[2].CategoryName)" />
@@ -92,7 +92,7 @@
                 <i class='fas fa-truck' style='font-size:48px;padding-top:15px;'></i>
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(model => model[3].CategoryName)</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <p class="card-text">@Model[3].Description</p>
                     @using (Html.BeginForm("Search", "Product", FormMethod.Post))
                     {
                         <input name="Category" type="hidden" value="@Html.DisplayFor(model => model[3].CategoryName)" />
