--- a/Nova_Land/Views/Shared/_Layout.cshtml
+++ b/Nova_Land/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         </ul>
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Checkout" asp-action="Index"><i class="fa fa-shopping-cart" style="font-size:30px"></i></a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Checkout" asp-action="Index">Cart</a>
                             </li></ul>
                       
                         <partial name="_LoginPartial.cshtml" />
