Added images on the home page and for cart.

--- a/Nova_Land/Views/Shared/_Layout.cshtml
+++ b/Nova_Land/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         </ul>
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Checkout" asp-action="Index">Cart</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Checkout" asp-action="Index"><img class="align-content-center" src="./css/images/cart.jpg" height=30px width=30px style="padding-top:2px;"></img></a>
                             </li></ul>
                       
                         <partial name="_LoginPartial.cshtml" />
