--- a/Nova_Land/Views/Home/Index.cshtml
+++ b/Nova_Land/Views/Home/Index.cshtml
@@ -42,7 +42,9 @@
     <div class="pt-5 row">
         <div class="col-6">
             <div class="card">
-                <i class='fas fa-house-user' style='font-size:48px;padding-top:15px;'></i>
+                <div class="align-content-center">
+                   <img src="./images/house.jpg" height=40px width=40px style="padding-top:15px;" />
+               </div>
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(model => model[0].CategoryName)</h5>
                     <p class="card-text">@Model[0].Description</p>
@@ -58,7 +60,9 @@
         <div class="col-6">
             <div class="card">
                 
-               <i class='fas fa-car-side' style='font-size:48px;padding-top:15px;'></i>
+               <div class="align-content-center">
+                   <img src="./images/carrr.jpg" height=40px width=40px style="padding-top:15px;" />
+               </div>
                <div class="card-body">
                    <h5 class="card-title">@Html.DisplayFor(model => model[1].CategoryName)</h5>
                    <p class="card-text">@Model[1].Description</p>
@@ -75,7 +79,9 @@
     <div class="row" >
         <div class="col-6">
             <div class="card">
-                <i class='fas fa-couch' style='font-size:48px;padding-top:15px;'></i>
+                <div class="align-content-center">
+                   <img src="./images/couch.jpg" height=40px width=40px style="padding-top:15px;" />
+               </div>
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(model => model[2].CategoryName)</h5>
                     <p class="card-text">@Model[2].Description</p>
@@ -89,7 +95,9 @@
         </div>
         <div class="col-6">
             <div class="card">
-                <i class='fas fa-truck' style='font-size:48px;padding-top:15px;'></i>
+                <div class="align-content-center">
+                   <img src="./images/truck.jpg" height=40px width=40px style="padding-top:15px;" />
+               </div>
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(model => model[3].CategoryName)</h5>
                     <p class="card-text">@Model[3].Description</p>
